Fixed dark mode styling
Fixed dark mode styling issues for consistent dark mode. Will need to fix dark mode for landing page in the future

--- a/src/components/BarChart.css
+++ b/src/components/BarChart.css
@@ -4,7 +4,7 @@
   height: auto;
   margin: 0 auto;
   padding: 2vmin;
-  background-color: #333;
+  background-color: #1e1e1e;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   color: white;
@@ -15,7 +15,7 @@
 }
 
 .bar-chart-container canvas {
-  background-color: #444;
+  background-color: #1e1e1e;
   border-radius: 10px;
 }
 
