--- a/src/components/Options.css
+++ b/src/components/Options.css
@@ -1,9 +1,5 @@
 @import url("../fonts.css");
 
-body {
-  background-color: #121212;
-}
-
 .Option-container {
   font-family: "Supreme", sans-serif;
   display: flex;
